# data-pipeline-with-data-quality-validation

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt
dq_flow/: database.py  logger.py  validation.py
scripts/: generate_fake_data.py  setup_database.py
