[project]
name = "projeto-pipeline-data-quality"
version = "0.1.0"
description = ""
authors = [
    {name = "Matheus",email = "matheusvirgolino0@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv (>=0.9.9,<0.10.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "pyodbc (>=5.2.0,<6.0.0)",
    "pandera (>=0.24.0,<0.25.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "faker (>=37.4.0,<38.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
